<resources>
    <string name="app_name">SELFITZZ</string>
    <string name="start">Start</string>
    <string name="bc">BMI CALCULATOR</string>
    <string name="calculator">Calculator</string>
    <string name="weight">WEIGHT (KG)</string>
    <string name="height">HEIGHT (CM)</string>
    <string name="calculate">Calculate</string>
    <string name="kgs">IN KGs</string>
    <string name="cms">IN CMs</string>
    <string name="weight_kg">WEIGHT (KG)</string>
    <string name="result">YOUR RESULT</string>
    <string name="set">SET</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="done">DONE</string>
    <string name="meditate">MEDITATE</string>
    <string name="time">TIME</string>
    <string name="settime">Set Time</string>
    <string name="cancelalarm">Cancel Alarm</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="cpwd">Conform Password</string>
    <string name="aha">Already have account?</string>
    <string name="enteremail">Enter Your Email</string>
    <string name="enterpassword">Enter Your Password</string>
    <string name="conformpassword">Conform Your Password</string>
    <string name="cna">Create new account?</string>
    <string name="login">LOGIN</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="gender">GENDER</string>
    <string name="entername">Enter Your Name</string>
    <string name="enterage">Enter Your Age</string>
    <string name="entergender">Enter Your Gender</string>
    <string name="calorie">CALORIES BURNT:</string>
    <string name="cong">CONGRATULATIONS!!!</string>
    <string name="cal">250kcal</string>
    <string name="wg1">Set your weekly goal</string>
    <string name="wg2">We recommend training at least 3 days weekly for a better result</string>
    <string-array name="wtd">
        <item>1 day</item>
        <item>2 days</item>
        <item>3 days</item>
        <item>4 days</item>
        <item>5 days</item>
        <item>6 days</item>
        <item>7 days</item>
    </string-array>
    <string-array name="fdw">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="save">Save</string>
    <string name="BMI">BMI</string>
    <string name="weeklygoals">WEEKLY GOALS</string>
    <string name="workout">WORKOUT</string>
    <string name="yoga">YOGA</string>
    <string name="meditation">MEDITATION</string>
    <string name="stepcounter">STEP COUNTER</string>
    <string name="tsc">TOTAL STEPS WALKED</string>
    <string name="kidsyoga">KIDS YOGA</string>
    <string name="arm">ARM</string>
    <string name="chest">CHEST</string>
    <string name="legs">LEGS</string>
    <string name="abs">ABS</string>
    <string name="snb">SHOULDER AND BACK</string>
    <string name="sixteenseconds">00:16</string>
    <string name="twentyseconds">00:20</string>
    <string name="thirtyseconds">00:30</string>
    <string name="six">x6</string>
    <string name="eight">x8</string>
    <string name="ten">x10</string>
    <string name="twelve">x12</string>
    <string name="fourteen">x14</string>
    <string name="sixteen">x16</string>
    <string name="twenty">x20</string>
    <string name="thirty">x30</string>
    <string name="thirtytwo">x32</string>
    <string name="jumpingjacks">JUMPING JACKS</string>
    <string name="jjexp">Start with your feet together and your arms by your sides,then jump up with your feet apart and your hands overhead.
        Return to the start position then do the next rep. This exercise provides a full-body workout and works all your large muscle groups.</string>
    <string name="abdominalcrunches">ABDOMINAL CRUNCHES</string>
    <string name="abexp">Lie on your back with tour knees bent and your arms stretched forward. Then lift your upper off the floor.
        Hold for a few seconds and slowly return. It primarily works the rectus abdominis muscle and the obliques.</string>
    <string name="russiantwist">RUSSIAN TWIST</string>
    <string name="rsexp">Sit on the floor with your knees bent, feet lifted a little bit and back tilted backwards.
        Then hold your hands together and twist from side to side</string>
    <string name="mountainclimbers">MOUNTAIN CLIMBERS</string>
    <string name="bridgepose">Setu Bandha Sarvangasana (Bridge Pose)</string>
    <string name="bdpexp">Lie on the back. Bend the knees a little and keep the feet flat on the floor, hip-width apart. The knees and ankles must be in a straight line.
        Place the arms in a resting position beside the body, with the palms downwards. Take a deep breath and lift the lower, middle, and upper back off the floor. Balance the body in a way that the arms, shoulders, and feet support the body weight.
        Keep the buttocks tight. Have the fingers interlaced, and hands pushed to the ground to help lift the torso higher. Let your child hold this posture for as long as they are comfortable and breathe slowly while they are in the pose.
        Exhale and release.</string>
    <string name="treepose">Vrksasana (Tree Pose)</string>
    <string name="tpexp">Begin the posture with the mountain pose, wherein the legs are straight, hands at the sides, back straight, and thigh muscles firm.
Lift the right foot with the knee out.
Place the right foot on the left inner thigh in a position where it feels comfortable.
Press the hands together above the head.
Gaze at a point about five feet away.
Hold the position for 30 seconds to a minute.
Return the hands to the chest and then lower the right leg.
Repeat it on the left leg.</string>
    <string name="cobrapose">Bhujangasana (Cobra Pose)</string>
    <string name="catpose">Marjaryasana (Cat Pose)</string>
    <string name="catpexp">Take a tabletop position using the hands and knees.
The knees should be directly below their hips, and toes curled.
The wrists, elbows, and shoulders should be straight and perpendicular to the floor.
Center the head in a neutral position with eyes looking at the floor.
With an exhalation, arch the spine up towards the ceiling.
Release the head towards the floor without forcing the chin towards the chest.
Come back to the initial tabletop position while inhaling slowly.</string>
    <string name="bowpose">Dhanurasana (Bow Pose)</string>
    <string name="bpexp">Lie flat on the stomach, keeping the arms stretched along the sides of the body and head resting gently on the mat.
Inhale and bend the knees bringing the feet towards the hips.
Grasp the ankles using both the hands.
Lift the shoulders, torso, legs, and hips off the floor while gazing straight ahead.
Hold the posture for four to five breaths, then lower the knees and release the feet.
Rest on the stomach.</string>
    <string name="frogpose">Mandukasana (Frog Pose)</string>
    <string name="fpexp">Start by going on the floor on the hands and knees.
Position the knees a few inches apart and place the feet right behind the knees.
Place the palms right under the shoulders with the fingers facing forward.
Look downwards and focus at a point between your hands.
Now, push the tailbone towards the back. This will stretch the spine. This position is known as the table position.
Slowly move the knees outwards to the sides. Then align the ankles and feet with the knees in a straight line.
Start to slide downwards while keeping the palms flat against the floor.
Exhale and keep pushing the hips backwards until a stretch is felt.
Now, hold this position for three to five breaths.
Come back to the table position again.</string>
    <string name="easypose">Sukhasana (Easy Pose)</string>
    <string name="epexp">Sit upright with legs crossed.
Rest the hands on the knees with the palms facing up.
Evenly balance the weight across the sit bones.
Keep the head, neck, and spine aligned all along.
Elongate the spine but without stiffing the neck.
The feet and thighs should be relaxed.
Retain this posture for a minute.
Release and change the cross-legged position.</string>
    <string name="butterflypose">Baddha Konasana (Butterfly Pose)</string>
    <string name="btpexp">Sit with the spine upright and legs spread out straight.
Fold the legs so that the feet are touching each other. Hold them with the hands.
While exhaling, gently move the thighs and knees in a downward motion.
Then start flapping the legs up and down, like the wings of a butterfly.
The flapping should be slow initially and then pick up to speed. Breathing should be at a normal pace.
Slow down gradually and then stop.
Gently release the posture while exhaling.</string>
    <string name="corpsepose">Savasana (Corpse Pose)</string>
    <string name="copexp">Lie on the back with legs straight and arms at the sides. The arms should be at a minimum distance of six inches away from the body.
Keep the eyes closed, and palms faced upwards.
Keep the feet drop open.
Breathe normally while resting the body’s weight on the ground.
Slowly exhale while relaxing and de-stressing all the body parts.
This is the best relaxing yoga pose for kids.</string>
    <string name="chairpose">Utkatasana (Chair Pose)</string>
    <string name="chpexp">Inhale and raise the arms above the head.
Bend the knees forward while exhaling; the thighs should be parallel to the floor.
While performing it, the knees will project slightly ahead.
Lift your arms and stretch them straight.
Keep the tailbone down and the lower back long.
Keep the breath steady and easy throughout.
Keep the gaze forward.
Retain this posture for as long as comfortable, but not more than a minute.</string>
    <string name="heropose">Virasana (Hero Pose)</string>
    <string name="hpexp">Sit with the knees together and the feet hip-width apart.
Sit on the heels with the heels touching the hips.
The hands should rest on the knees with the palms facing up.
Straighten the spine and drop the shoulders down and a little towards the back.
Relax the core while taking deep breaths.
Retain the posture for as long as it is comfortable.</string>
    <string name="boatpose">Naukasana (Boat Pose)</string>
    <string name="mountainpose">Tadasana (Mounatin Pose)</string>
    <string name="mpexp">Stand straight and tall.
Spread the legs a few inches apart and spread the toes.
Keep the arms alongside the body.
The shoulders must be relaxed and not stiff.
Raise the arms above your head.
Hold the posture and breathe slowly.
Retain as long as comfortable.</string>
    <string name="happybabypose">Ananda Balasana(Happy Baby Pose)</string>
    <string name="hbpexp">Lie on the back with the knees drawn in towards the chest.
Hold the feet with hands. Ensure that the arms are in front of the torso.
Draw the shoulders to the back.
Slightly stretch the arms and feet.
Draw the knees wide apart, as much as comfortable.
Elongate the lower back down to the ground while touching the tip of the tailbone.
Retain the position for a minute or less, and then release.</string>
    <string name="lionpose">Simhasana (Lion Pose)</string>
    <string name="lpexp">Sit with the hips on the heels.
Rest the palms on the knees.
Start inhaling from the nose, and while you’re on it, stick your tongue out.
Keep the eyes wide open, exhale through the mouth, and make a sound of a roaring lion (Haaa).
Many yoga schools suggest that you either concentrate looking at the tip of the nose or in the middle of the eyebrows.</string>
</resources>