<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BMICalculator">

    <TextView
        android:id="@+id/BMIcalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#536FDE"
        android:gravity="center"
        android:text="@string/bc"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:background="#536FDE"
        android:text="@string/weight"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/weightkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints=""
        android:hint="@string/kgs"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:text="@string/height"
        android:textColor="#000000"
        android:textSize="30sp"
        android:background="#536FDE"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/heightcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:autofillHints=""
        android:hint="@string/cms"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        android:onClick="calculateBMI"
        android:text="@string/calculate"
        android:textStyle="bold"
        app:backgroundTint="#000000" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="#536FDE"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="#536FDE"
        android:textSize="25sp" />

</LinearLayout>