<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kidsyoga"
    android:background="@color/cyan"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bridgepose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bdpexp"
            android:layout_below="@id/tv1"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv2"
            android:contentDescription="@string/bridgepose"
            android:src="@drawable/bridgepose"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treepose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i1"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tpexp"
            android:layout_below="@id/tv3"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv4"
            android:contentDescription="@string/treepose"
            android:src="@drawable/treepose"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cobrapose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i2"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copexp"
            android:layout_below="@id/tv5"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv6"
            android:contentDescription="@string/cobrapose"
            android:src="@drawable/cobrapose"/>

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i3"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catpexp"
            android:layout_below="@id/tv7"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv8"
            android:contentDescription="@string/catpose"
            android:src="@drawable/catpose"/>

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bowpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i4"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpexp"
            android:layout_below="@id/tv9"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv10"
            android:contentDescription="@string/bowpose"
            android:src="@drawable/bowpose"/>

        <TextView
            android:id="@+id/tv11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frogpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i5"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fpexp"
            android:layout_below="@id/tv11"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv12"
            android:contentDescription="@string/frogpose"
            android:src="@drawable/frogpose"/>

        <TextView
            android:id="@+id/tv13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easypose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i6"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epexp"
            android:layout_below="@id/tv13"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv14"
            android:contentDescription="@string/easypose"
            android:src="@drawable/easypose"/>

        <TextView
            android:id="@+id/tv15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butterflypose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i7"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btpexp"
            android:layout_below="@id/tv15"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv16"
            android:contentDescription="@string/butterflypose"
            android:src="@drawable/butterflypose"/>

        <TextView
            android:id="@+id/tv17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corpsepose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i8"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copexp"
            android:layout_below="@id/tv17"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv18"
            android:contentDescription="@string/corpsepose"
            android:src="@drawable/corpsepose"/>

        <TextView
            android:id="@+id/tv19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chairpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i9"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chpexp"
            android:layout_below="@id/tv19"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv20"
            android:contentDescription="@string/chairpose"
            android:src="@drawable/chairpose"/>

        <TextView
            android:id="@+id/tv21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heropose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i10"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hpexp"
            android:layout_below="@id/tv21"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv22"
            android:contentDescription="@string/heropose"
            android:src="@drawable/heropose"/>

        <TextView
            android:id="@+id/tv23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boatpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i11"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btpexp"
            android:layout_below="@id/tv23"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv24"
            android:contentDescription="@string/boatpose"
            android:src="@drawable/boatpose"/>

        <TextView
            android:id="@+id/tv25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mountainpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i12"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpexp"
            android:layout_below="@id/tv25"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv26"
            android:contentDescription="@string/mountainpose"
            android:src="@drawable/mountainpose"/>

        <TextView
            android:id="@+id/tv27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happybabypose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i13"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hbpexp"
            android:layout_below="@id/tv27"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv28"
            android:contentDescription="@string/happybabypose"
            android:src="@drawable/happybabypose"/>

        <TextView
            android:id="@+id/tv29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lionpose"
            android:background="@color/blue"
            android:textStyle="bold"
            android:layout_below="@id/i14"
            android:textColor="#000000"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lpexp"
            android:layout_below="@id/tv29"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/i15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv30"
            android:contentDescription="@string/lionpose"
            android:src="@drawable/lionpose"/>


    </RelativeLayout>

</ScrollView>